*Empty MediaWiki Message*

--- a/პოლონელები.mw
+++ b/პოლონელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''პოლონელები''' - [[ხალხი]], [[პოლონეთი|პოლონეთის]] ძირითადი მოსახლენი (37,75 მლნ). ცხოვრობენ აგრეთვე, [[აშშ|აშშ-]]ში 3.8 მლნ, [[საფრანგეთი|საფრანგეთში]] 300 ათ., [[რუსეთი|რუსეთის ფედერაციაში]] 94,6 ათ., [[უკრაინა|უკრაინაში]] 219,2 ათ., [[ლიტვა|ლიტვაში]] 258 ათ., [[ბელარუსი|ბელარუსში]] 417,7 ათ.. ზოგიერთი ეთნოგრაფიული ჯგუფი (კაშუბები, მაზურები და ა.შ.) ინარჩუნებენ ენისა და კულტურის თავისებურებებს.
 
 
@@ -8,7 +5,7 @@
 *'''საერთო რაოდენობა''': 44,2 მლნ. 
 *'''ენა''': [[პოლონური ენა|პოლონური]].
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:პოლონელები|*]]
 
