*Empty MediaWiki Message*

--- a/ინგლისელები.mw
+++ b/ინგლისელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ინგლისელები''' - [[ინგლისი|ინგლისის]] ძირითადი მოსახლენი, ერთ-ერთი ხალხი დიდი ბრიტანეთისა. მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ატლანტურ-ბალტიურ შტოს. მე–17-19 სს-ის ინგლისური კოლონიზაციის დროს გადასახლდნენ ჩრდილოეთ ამერიკაში, [[ავსტრალია|ავსტრალიაში]], [[ახალი ზელანდია|ახალ ზელანდიაში]], სამხრეთ აფრიკაში და აბორიგენ მოსახლეობასთან შერევის შედეგად სათავე დაუდეს ახალ ინგლისურენოვან ხალხებს - ამერიკელებს, ანგლო-კანადელებს, ანგლო-ახალზელანდიელებს, ანგლო-აფრიკელებს, ფოლკლენდელებს და სხვ.
 
 
@@ -8,6 +5,6 @@
 *'''საერთო რაოდენობა''': 48,5 მლნ, მათ შორის [[დიდი ბრიტანეთი|ბრიტანეთში]] 44,7 მლნ, [[კანადა|კანადაში]] 1 მლნ, [[ავსტრალია|ავსტრალიაში]] 940 ათ., [[აშშ|აშშ-]]ში 650 ათ., სამხრეთ აფრიკაში 230 ათ., [[ინდოეთი|ინდოეთში]] 200 ათ.. [[ახალი ზელანდია|ახალ ზელანდიაში]] 188 ათ.. 
 *'''ენა''': ინგლისური. 
 *'''მორწმუნეები''': ძირითადად [[ანგლიკანიზმი|ანგლიკანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:დიდი ბრიტანეთი]]
