--- a/ნიუ-იორკერი_(ჟურნალი).mw
+++ b/ნიუ-იორკერი_(ჟურნალი).mw
@@ -107,6 +107,7 @@
 *[http://www.newyorker.com/ ნიუ-იორკერის ვებგვერდი]
 
 [[კატეგორია:ამერიკის მასმედია]]
+[[კატეგორია:ნიუ-იორკი]]
 
 [[de:The New Yorker]]
 [[en:The New Yorker]]
