*Empty MediaWiki Message*

--- a/ბრიტანეთის_მუზეუმი.mw
+++ b/ბრიტანეთის_მუზეუმი.mw
@@ -5,7 +5,7 @@
 
 ბტიტანეთის მუზეუმში, ისევე როგორც ლონდონის სხვა გალერიებში, შესვლა უფასოა. თუმცა ზოგიერთი სპეციალური დროებითი ეგზიბიციები ფასიანია.
 
-{{ითარგმნება}}
+{{მუზეუმი}}
 ==რესურსები ინტერნეტში==
 * [http://the.british.museum/ ბრიტანეთის მუზეუმის ოფიციალური ვებ-გვერდი']
 
