*Empty MediaWiki Message*

--- a/გუგენჰაიმის_მუზეუმი_(ნიუ-იორკი).mw
+++ b/გუგენჰაიმის_მუზეუმი_(ნიუ-იორკი).mw
@@ -3,7 +3,7 @@
 
 მუზეუმს თავდაპირველად ერქვა "არა-ობიექტური მხატვრობის მუზეუმი" (The Museum of Non-Objective Painting) და დაფუძნდა ადრეულ მოდერნისტთა, როგორებიც იყვნენ [[კანდინსკი, ვასილი|ვასილი კანდინსკი]] და [[მონდრიანი, პიე|პიე მონდრიანი]], ავანგარდული ხელოვნების გამოსაფენად. მუზეუმი მის ამჟამინდელ ადგილზე, მეხუთე ავენიუსა და 89-ე ქუჩის გადაკვეთაზე ცენტრალურ პარკთან, 1959 წელს გადმოვიდა, როცა [[ვრაიტი, ფრენკ ლლოიდ|ფრენკ ლლოიდ ვრაიტის]] პროექტის შენობა დასრულდა. შენობის არქიტექტორი შეარჩია [[გუგენჰაიმი, სოლომონ|სოლომონ გუგენჰაიმის]] მეგობარმა ბარონესა ჰილა ფონ რებაიმიმ. ვრაიტს საკმაო უთანხმოება ჰქონდა ბარონესასთან შენობის ფორმასა და დიზაინზე, თუმცა ბარონესამ საბოლოოდ მაინც თავისი გაიტანა და შენობა ოვალური ფორმისა და თეთრი ფერის დარჩა.
 
-{{ითარგმნება}}
+{{მუზეუმი}}
 
 ==რესურსები ინტერნეტში==
 *[http://www.guggenheim.org/new_york_index.html ოფიციალური ვებ-გვერდი]
