*Empty MediaWiki Message*

--- a/ერაყის_ეროვნული_მუზეუმი_(ბაღდადი).mw
+++ b/ერაყის_ეროვნული_მუზეუმი_(ბაღდადი).mw
@@ -4,7 +4,7 @@
 [[სპარსეთის ყურის ომი|სპარსეთის ყურის ომის]] დროს 1991 წელს მუზეუმი დაიხურა [[აშშ]]-ის საჰაერო დაბომბვის შიშით. მუზეუმი ხელახლა გაიხსნა 2000 წლის [[28 აპრილი|28 აპრილს]] ყოფილი პრეზიდენტი [[ჰუსეინი, სადამ|სადამ ჰუსეინის]] დაბადების დღეს.
 
 
-{{ითარგმნება}}
+{{მუზეუმი}}
 
 [[კატეგორია:მუზეუმები]]
 [[კატეგორია:ბაღდადი]]
