*Empty MediaWiki Message*

--- a/ხუან_გრი.mw
+++ b/ხუან_გრი.mw
@@ -1,10 +1,36 @@
+[[სურათი:Gris2.jpg|thumb|”მამაკაცი კაფეში”, ზეთი ტილოზე]]
 '''ხუან გრი''' (Juan Gris, სრული სახელი: '''ხოსე ვიქტორიანო გონზალეს-პერეს''') (*[[23 მარტი]], [[1887]] - [[11 მაისი]], [[1927]]) -- ესპანელი მხატვარი და სკულპტორი, რომელიც ცხოვრობდა და მოღვაწეობდა საფრანგეთში თითქმის მთელი სოცოცხლის განმავლობაში. მისი ნამუშევრები მჭიდროდ უკავშირდება ინოვაციური ხელოვნების ჟანრის - [[კუბიზმი|კუბიზმის]] - აღმოცენებას.
 
-გრი დაიბადა [[მადრიდი|მადრიდში]], [[ესპანეთი]] და სწავლობდა მექნიკურ ხაზვას მადრიდის ხელოვნების სკოლაში (Escuela de Artes y Manufacturas) 1902-1904 წლებში. 1904-05 წლებში ის ხატვას სწავლობს აკადემიურ ფერმწერ [[კარობონერო, ხოსე მარია|ხოსე მარია კარბონეროსთან]].
+გრი დაიბადა [[მადრიდი|მადრიდში]], [[ესპანეთი]] და სწავლობდა მექანიკურ ხაზვას მადრიდის ხელოვნების სკოლაში (Escuela de Artes y Manufacturas) 1902-1904 წლებში. 1904-05 წლებში ის ხატვას სწავლობს აკადემიურ ფერმწერ [[კარობონერო, ხოსე მარია|ხოსე მარია კარბონეროსთან]].
 
 [[1906]] წელს გრი [[პარიზი|პარიზში]] გადადის და უმეგობრდება [[მატისი, ანრი|ანრი მატისს]], [[ბრაქი, ჟორჟ|ჟორჟ ბრაქს]],  [[ლეჯერი, ფერნანდ|ფერნანდ ლეჟერსა]] და [[მოდიგლიანი, ამედეო|ამედეო მოდილიანის]]. აქ გრი მისი კიდევ ერთი მეგორბისა და თანამოძმის, [[პიკასო, პაბლო|პაბლო პიკასოს]], ძლიერი გავლენის ქვეშ ექცევა. მისი პიკასოს პორტრეტი (1912) ადრეული კუბიზმის მნიშვნელოვანი ნიმუშია, რომელიც პიკასოს ან ჟორჟ ბრაქის მიერ არაა შესრულებული.
 
-{{ესკიზი}}
+1910 წელს სერიუზულად ხატვის დაწყებამდე გრი იუმორისტულ ილუსტრაციებს აკათებდა ჟურნალებისთვის ლე რირ, ლასიეტ-ო-ბერ, ლე-შარივარი, და კრი-დე-პარი. 1912 წლისთვის მან უკვე თვითმყოფადი კუბისტური სტილი განავითარა.
+
+[[სურათი:Gris.picasso.jpg|thumb|left|”პიკასოს პორტრეტი”, 1912, [[ჩიკაგოს ხელოვნების ინსტიტუტი]]]]
+თავდაპირველად გრი კუბიზმის ანალიტიკურ სტილში ხატავს, თუმცა 1913 წლიდან ის სინთეტურ კუბიზმში ინაცვლებს, ამ სტილის მიმდევარი ხდება პაპიერ-კოლე’ს ინტენსიური გამოყენებით. პიკასოსა და ბრაქიგან განსხვავებით, რომელთა კუბისტური ნამუშევრები მონოქრომატული იყო, გრი ხატავდა მკვეთრი ღია ჰარმონიული ფერებით გამომწვევი ახალი კომბინაციებით მისი მეგობარი მატისის მანერით.
+
+1922 წელს მხატვარმა პირველად [[დიაგილევი, სერგეი|სერგეი დიაგილევის]] საბალეტო სცენებისა და კოსტიუმების დიზაინი შექმნა.
+
+გრის უმთავრესი აესთეტიური თეორიები მის 1924-25 წლის ნამუშევრებში გამოიხატა. 1924 წელს ის სიტყვით გამოდის [[პარიზის უნივერსიტეტი|სორბონაში]] სათაურით ”Des possibilités de la peinture” (ფრანგ. ხატვის შესაძლებლობანი), სადაც საკუთარ თეორიებს აჟღერებს. ამავე პერიოდში გრის უმნიშვნელოვანესი გამოფენები მოეწყო პარიზში (სიმონის გალერეა), ბერლინში და დიუსელდორფში (ფლეხტჰაიმის გალერეები, 1923 და 1925).
+
+გრი გარდაიცვალა ბულონ-სურ-სენში ([[პარიზი]]) 1927 წლის გაზაფხულზე 40 წლის ასაკში. დარჩა ერთი ვაჟი, ჟორჟი.
+
+მიუხედავად იმისა, რომ მხატვარი პიკასოს საკუთარ მასწავლებლად მიიჩნევდა, [[შტაინი, გერტრუდ|გერტრუდ შტაინის]] მტკიცებით ”გრი იყო პერსონა, რომელსაც პიკასო სიამოვნებით ამოშლიდა რუქიდან”
+
+2005 წლამდე გრის ერთ-ერთი ფერწერული ტილო $8,4 მილიონ ამ. დოლარად გაიყიდა.
+
+==გალერეა==
+<gallery>
+Image:Gris.beer-cards.jpg|''Glass of Beer and Playing Cards'', 1913, [[Columbus Museum of Art]], Ohio.
+Image:Gris.violin-checker.jpg|''Violin and Checkerboard'', 1913, Stephen A. Simon and Bonnie Simon Collection.
+Image:Juan Gris.jpg|''The Guitar'', 1918.
+Image:Gris.sl-mandolin.jpg|''Still Life with Fruit Dish and Mandolin'', 1919, Private collection, Paris.
+Image:Gris.harlequin-guitar.jpg|''Harlequin with Guitar'', 1919, Galerie Louise Leiris, Paris.
+</gallery>
+
+==რესურსები ინტერნეტში==
+*[http://www.ibiblio.org/wm/paint/auth/gris/ ვებ-მუზეუმი]]
 
 [[კატეგორია:ესპანელი მხატვრები]]
 [[კატეგორია:ესპანელები]]
