--- a/ლეონარდო_და_ვინჩი.mw
+++ b/ლეონარდო_და_ვინჩი.mw
@@ -4,7 +4,7 @@
 
 ==ბიოგრაფია==
 
-==ნახატები==
+==ფერწერა==
 * ''[[ნათლისღება (ლეონარდო)|ნათლისღება]]'' (1472-1475) – [[უფიცის გალერეა]], [[ფლორენცია]], [[იტალია]]
 * ''[[ხარება (ლეონარდო)|ხარება]]'' (1475-1480) – უფიცის გალერეა
 * ''[[ჯინევრა დე ბენჩი (ლეონარდო)|ჯინევრა დე ბენჩი]]'' (1475) – [[ხელოვნების ეროვნული გალერეა (ვაშინგტონი)|ხელოვნების ეროვნული გალერეა]], [[ვაშინგტონი (აშშ)|ვაშინგტონი]], [[აშშ]]
@@ -30,7 +30,8 @@
 
 
 [[კატეგორია:იტალიელები]]
-[[კატეგორია:მხატვრები]]
+[[კატეგორია:იტალიელი მხატვრები]]
+[[კატეგორია:იტალიელი არქიტექტორები]]
 [[კატეგორია:დაბადებული 1452]]
 [[კატეგორია:გარდაცვლილი 1519]]
 
