*Empty MediaWiki Message*

--- a/ნეპტუნი.mw
+++ b/ნეპტუნი.mw
@@ -7,8 +7,7 @@
 
 პლანეტა აღმოჩენილ იქნა [[1846]] წლის [[23 სექტემბერი|23 სექტემბერს]] და დღემდე მას მხოლოდ ერთი ხომალდი ვოიაჯერ 2 ეწვია, რომელმაც მის გასწვრივ 1989 წლის 25 აგვისტოს ჩაიფრინა.
 
-
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
