*Empty MediaWiki Message*

--- a/მერკური.mw
+++ b/მერკური.mw
@@ -5,7 +5,7 @@
 
 რომაელებმა პლანეტას სწრაფმავალი მაცნე ღმერთი [[მერკური (ღმერთი)|მერკურის]] სახელი შეარქვეს, შესაძლოა მისი სწრაფი მოძრაობის გამო გარიჟრაჟის ცაზე. მერკურის ასტრონომიული სიმბოლოა  ☿. ძვ.წ. მე-5 საუკუნემდე ბერძენი ასტრონომები თვლიდნენ, რომ პლანეტა ორი სხვადასხვა ობიექტი იყო. ჩინური, კორეული, იაპონური და ვიეტნამური კულტურები პლანეტას წყლის ვარსკვლავად მოიხსენიებენ (水星), ხუთ ელემენტზე დაყრდნობით.
 
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
