*Empty MediaWiki Message*

--- a/ვენერა.mw
+++ b/ვენერა.mw
@@ -5,7 +5,7 @@
 
 ჩინურ, კორეულ, იაპონურ და ვიეტნამურ კულტურებში პლანეტას მოიხსენიებენ ლითონის ვარსკვლავად (金星), ხუთ ელემენტზე დაყრდნობით.
 
-{{ესკიზი}}
+{{ასტრონომია}}
 {{მზის სისტემა}}
 
 [[კატეგორია:მზის სისტემა]]
