*Empty MediaWiki Message*

--- a/მთვარე.mw
+++ b/მთვარე.mw
@@ -3,7 +3,7 @@
 
 პირველი ხელოვნური ობიექტი, რომელიც მთვარეზე დაეშვა იყო ’’ლუნა 2’’ (1959). პირველი ფოტოსურათები მთვარის დედამიწისგან მოფარებულ მხარეს გადაიღო ’’ლუნა 3’’-მა იმავე წელს. პირველი ადამიანები, რომლებმაც მთვარეზე დადგეს ფეხი იყვნენ ხომლდიდან ’’აპოლონ 11’’ (აშშ, 1969).
 
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
