*Empty MediaWiki Message*

--- a/მარსი.mw
+++ b/მარსი.mw
@@ -7,7 +7,7 @@
 
 ჩინურ, კორეულ, იაპონურ და ვიეტნამურ კულტურებში პლანეტას მოიხსენიებენ როგორც ცეცხლოვან ვარსკვლავს (火星), ძველი ჩინური ხუთი ელემენტის მითოლოგიურ ციკლზე დაყრდნობით.
 
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
