*Empty MediaWiki Message*

--- a/იუპიტერი.mw
+++ b/იუპიტერი.mw
@@ -6,7 +6,7 @@
 იუპიტერი 2,5-ჯერ უფრო მასიურია ვინემ ყველა სხვა პლანეტა ერთად აღებული. ის იმდენად მასიურია, რომ მისი ბარიცენტრი მზესთან მიმართებაში ფაქტობრივად მზის ზედაპირის გარეთ მდებარეობს (1,068 მზიური რადია მზის ცენტრიდან). ის 318-ჯერ მასიურია დედამიწაზე და მისი დიამეტრი დედამიწისას 11-ჯერ, ხოლო მოცულობა 1300-ჯერ აღემატება. ბუნებრივად, იუპიტერის გრავიტაციული ზეგავლენა დომინირებს მზის სისტემის ევოლუციაზე: პლანეტათა უმრავლესობის ორბიტები უფრო ახლოსაა იუპიტერის ორბიტალურ სიბრტყესთან ვინემ მზის ეკვატორიალურ სიბრტყესთან. ასევე მცირე პერიოდის კომეტათა უმრავლესობა იუპიტერის ოჯახს ეკუთვნის (შედეგი იუპიტერის მასისა და ფარდობითი სიჩქარისა), და მასვე აკავშირებენ შიდა მზის სისტემის ისტორიის გვიანდელ მძიმე ბომბარდირებასთან. ზოგიერთი მკვლევარის თქმით იუპიტერის მზის სისტემის მტვერსასრუტია, მისი უზომო გრავიტაციული მიზიდულობის გამო.
 
 
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
