*Empty MediaWiki Message*

--- a/სატურნი.mw
+++ b/სატურნი.mw
@@ -1,8 +1,7 @@
 [[სურათი:Saturn (planet) large.jpg|thumb|250px|სატურნი რგოლებით]]
 '''სატურნი''' სიშორით მეექვსე პლანეტაა [[მზე|მზიდან]]. ეს გაზის გიგანტი სიდიდით მეორე პლანეტაა [[მზის სისტემა|მზის სისტემაში]] [[იუპიტერი (პლანეტა)|იუპიტერის]] შემდეგ. მას ირგვლის მკვეთრად შესამჩნევი რგოლები აკრავს, რომლებიც ძირითადად ყინულის ნაწილაკებისგან შედგება მცირეოდენი ქვიანი მასისა და მტვერის ჩათვლით. პლანეტას რომაული ღმერთი [[სატურნი (ღმერთი)|სატურნის]] სახელი ჰქვია. მისი სიმბოლოა ღმერთის კვერთხის სტილიზებული რეპრეზენტაცია - ♄. ჩინურ, კორეულ, იაპონურ და ვეიტნამურ კულტურებში პლანეტას მიწის ვარსკვლავად მოიხსენიებენ (土星), ხუთი ელემენტის ციკლის მიხედვით.
 
-
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
