*Empty MediaWiki Message*

--- a/ურანი.mw
+++ b/ურანი.mw
@@ -5,7 +5,7 @@
 
 [[ნასა]]’ს ’’ვოიაჯერ 2’’ ერთადერთი კოსმოსური ხომალდი იყო, რომელმაც პლანეტამდე მიაღწია და ჯერჯერობით სხვა ექსპედიციები დაგეგმილი არ არის. ვოიაჯერი 1977 წელს გაიშვა და მან ურანუსის სიახლოვემდე 1986 წლის 24 იანვარს მიაღწია, რის შემდეგაც გზა [[ნეპტუნი (პლანეტა)|ნეპტუნისკენ]] გააგრძელა.
 
-{{ესკიზი}}
+{{ასტრონომია}}
 
 {{მზის სისტემა}}
 
