--- a/ასტრონომია.mw
+++ b/ასტრონომია.mw
@@ -56,6 +56,7 @@
 
 *[http://www.geocities.com/zurabgiorgadze/planet/index მზის სისტემა]
 
+{{ასტრონომია}}
 [[კატეგორია:ასტრონომია|*]]
 [[კატეგორია:საბუნებისმეტყველო მეცნიერებები]]
 
