*Empty MediaWiki Message*

--- a/დენიელ_ლიბესკინდი.mw
+++ b/დენიელ_ლიბესკინდი.mw
@@ -1,4 +1,5 @@
 [[სურათი:ImperialWarMuseumNorth01.jpg|thumb|250px|იმპერიული ომის მუზეუმის ჩრდ. ფასადი, მანჩესტერი]]
+[[სურათი:FreedomTower3.jpg|thumb|250px|[[ფრიდომ ტაუერი]] (მშენებარე), ნიუ-იორკი]]
 '''დენიელ ლიბესკინდი''' (Daniel Libeskind, *[[12 მაისი]], [[1946]], [[ლოძი]], [[პოლონეთი]]) ნაცისტთა [[ჰოლოკოსტი|ჰოლოკოსტს]] გადარჩენილ ებრაელთა შვილი, აშშ-ის ნატურალიზებული მოქალაქე 1965 წლიდან, არქიტექტორი. 
 
 ==განათლება==
