--- a/დენიელ_ლიბესკინდი.mw
+++ b/დენიელ_ლიბესკინდი.mw
@@ -9,7 +9,7 @@
 ===დასრულებული===
 *[[ებრაული მუზეუმი (ბერლინი)]], გერმანია;
 *[[ფელიქს-ნუსბაუმ-ჰაუსი]], ოსნაბრიუკი, გერმანია;
-*[[იმპერიული ომის მუზეუმი (მანჩესტერი), დიდი ბრიტანეთი;
+*[[იმპერიული ომის მუზეუმი (მანჩესტერი)]], დიდი ბრიტანეთი;
 *[[ლონდონის მეტროპოლიტენის უნივერსიტეტი]], მაგისტრანტთა ცენტრი, ჩრდ. ლონდონი;
 *[[დანიის ებრაული მუზეუმი (კოპენჰაგენი)]].
 
