*Empty MediaWiki Message*

--- a/ესპანელები.mw
+++ b/ესპანელები.mw
@@ -1,5 +1,3 @@
-{{ესკიზი}}
-
 '''ესპანელები''' - [[ხალხი]], [[ესპანეთი|ესპანეთის]] ძირითადი მოსახლენი (27,6 მლნ). ცხოვრობენ აგრეთვე [[საფრანგეთი|საფრანგეთში]] 500 ათ., [[არგენტინა|არგენტინაში]] 400 ათ., [[აშშ|აშშ-]]ში 200 ათ., [[ბრაზილია|ბრაზილიაში]] 200 ათ.. ანთროპოლოგიურად მიეკუთვნებიან [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს. ესპანელი ეთნოსი ჩამოყალიბდა იბერების ტომებისაგან, რომელთაც შეერია მოსული კელტური და გერმანული ტომები.
 
 
@@ -7,7 +5,7 @@
 *'''საერთო რაოდენობა''': 29,0 მლნ. 
 *'''ენა''': [[ესპანური ენა|ესპანური]]. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ესპანელები|*]]
 
