*Empty MediaWiki Message*

--- a/ლატვიელები.mw
+++ b/ლატვიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ლატვიელები''' - [[ხალხი]], [[ლატვია|ლატვიის]] ძირითადი მოსახლენი (1,39 მლნ). [[რუსეთი|რუსეთის ფედერაციაში]] 47 ათ. 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 1,54 მლნ. 
 *'''ენა''': [[ლატვიური ენა|ლატვიური]]. 
 *'''მორწმუნეები''': ძირითადად [[პროტესტანტიზმი|პროტესტანტები]], ნაწილი - [[კათოლიციზმი|კათოლიკები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 
