--- a/ლიეტუველები.mw
+++ b/ლიეტუველები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ლიტველები''' - [[ხალხი]], [[ლიტვა|ლიტვის]] ძირითადი მოსახლენი (2,924 მლნ). [[რუსეთი|რუსეთის ფედერაციაში]] 70 ათ., [[ლატვია|ლატვიაში]] 34,6 ათ.; [[აშშ|აშშ-]]ში 300 ათ.. 
 
 
@@ -8,5 +5,6 @@
 *'''საერთო რაოდენობა''': 3,45 მლნ. 
 *'''ენა''': ლიტვური. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
