*Empty MediaWiki Message*

--- a/მოლდოველები.mw
+++ b/მოლდოველები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''მოლდაველები''' - [[ხალხი]], [[მოლდოვა|მოლდოვის]] ძირითადი მოსახლენი (2,8 მლნ). ცხოვრობენ აგრეთვე [[უკრაინა|უკრაინაში]] (324,5 ათ.), [[რუსეთი|რუსეთის ფედერაციაში]] (172,7 ათ.). 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 3,35 მლნ 
 *'''ენა''': [[მოლდავური ენა|მოლდავური]].
 *'''მორწმუნეები''': [[მართლმადიდებლობა|მართლმადიდებლები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:მოლდოვა]]
