*Empty MediaWiki Message*

--- a/ნორვეგიელები.mw
+++ b/ნორვეგიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ნორვეგიელები''' - [[ხალხი]], [[ნორვეგია|ნორვეგიის]] ძირითადი მოსახლენი (4,15 მლნ). 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 5 მლნ. 
 *'''ენა''': [[ნორვეგიული ენა|ნორვეგიული]].
 *'''მორწმუნეები''': ძირითადად [[ლუთერანიზმი|ლუთერანები]], არიან აგრეთვე [[კათოლიციზმი|კათოლიკები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ნორვეგიელები|*]]
