*Empty MediaWiki Message*

--- a/პორტუგალიელები.mw
+++ b/პორტუგალიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''პორტუგალიელები''' - [[ხალხი]], [[პორტუგალია|პორტუგალიის]] ძირითადი მოსახლენი (9,8 მლნ). 
 
 
@@ -9,4 +6,5 @@
 *'''ენა''': პორტუგალიური. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
