*Empty MediaWiki Message*

--- a/რუმინელები.mw
+++ b/რუმინელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''რუმინელები''' - [[ხალხი]], [[რუმინეთი|რუმინეთის]] ძირითადი მოსახლენი (20,66 მლნ). მონათესავე ეთნოგრაფიული ჯგუფებია - მეგლენელი რუმინელები, არომუნები, ისტრიელი რუმინელები. რუმინული ეთნოსის საფუძველია თრაკიული ტომები - გეტები, დაკები. მიეკუთვნება ინდო-მედიტერანეული რასის პონტოურ ტიპს.
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[რუმინული ენა|რუმინული]]. 
 *'''მორწმუნეები''': ძირითადად [[მართლმადიდებლობა|მართლმადიდებლები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:რუმინელები|*]]
 
