--- a/სლოვაკები.mw
+++ b/სლოვაკები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''სლოვაკები''' - [[ხალხი]], [[სლოვაკეთი|სლოვაკეთის]] ძირითადი მოსახლენი. 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 5,6 მლნ, მათ შორის [[სლოვაკეთი|სლოვაკეთში]]. დაახლ. 4,5 მლნ. 
 *'''ენა''': [[სლოვაკური ენა|სლოვაკური]]. 
 *'''მორწმუნეები''': [[კათოლიციზმი|კათოლიკები]], არიან აგრეთვე [[პროტესტანტიზმი|პროტესტანტები]] და უნიატები.
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 
