*Empty MediaWiki Message*

--- a/ხორვატები.mw
+++ b/ხორვატები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ხორვატები''' - [[ხალხი]], [[ხორვატია|ხორვატიის]] ძირითადი მოსახლენი (3,8 მლნ). ცხოვრობენ აგრეთვე სერბიაში (200 ათ.), ბოსნია-ჰერცეგოვინაში (830 ათ.). 
 
 
@@ -9,4 +6,5 @@
 *'''ენა''': სერბო-ხორვატული. 
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
