--- a/არაბები.mw
+++ b/არაბები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''არაბები''' - არაბულენოვანი ხალხების (ალჟირელების, ეგვიპტელების, მაროკოელების და სხვა.) მეტაერთობა, დასავლეთ აზიისა და ჩრდილოეთ აფრიკის არაბული ქვეყნების ძირითადი მოსახლენი. 
 
 
@@ -8,5 +5,33 @@
 *'''საერთო რაოდენობა''': 199 მლნ. 
 *'''ენა''': არაბული ენის ადგილობრივი დიალექტები. 
 *'''მორწმუნეები''': უმრავლესობა - [[ისლამი|მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
+
+
+[[als:Araber]]
+[[ar:عرب]]
+[[bg:Араби]]
+[[de:Araber]]
+[[en:Arab]]
+[[eo:Araboj]]
+[[et:Araablased]]
+[[fa:عرب]]
+[[fi:Arabit]]
+[[fr:Arabes]]
+[[he:ערבים]]
+[[hr:Arapi]]
+[[it:Arabo]]
+[[ja:アラブ人]]
+[[ko:아랍인]]
+[[la:Arabi]]
+[[nl:Arabieren]]
+[[no:Arabere]]
+[[pl:Arabowie]]
+[[pt:Árabe]]
+[[ro:Arab]]
+[[ru:Арабы]]
+[[sl:Arabci]]
+[[sv:Araber]]
+[[tt:Ğäräp xalqı]]
+[[zh:阿拉伯人]]
