*Empty MediaWiki Message*

--- a/ინდიელები.mw
+++ b/ინდიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ინდიელები''' - ამერიკის წითელკანიანი აბორიგენი ტომები (ესკიმოსებისა და ალეუტების გარდა); ყველაზე მრავალრიცხოვანი ხალხებია - კეჩუა, აიმარა, აცტეკები, მაია, გუარანი, არაუკანები და სხვ. ევროპული კოლონიზაციის გამო მრავალი ტომი განადგურებულ იქნა სრულად ან ნაწილობრივ, ან გასახლებული სხვა ტერიტორიებზე. [[აშშ|აშშ-]]სა და [[კანადა|კანადაში]] ისინი ძირითადად რეზერვაციებში ცხოვრობენ, [[ბოლივია|ბოლივიასა]] და [[გვატემალა|გვატემალაში]] მოსახლეობის უმრავლესობას წარმოადგენს.
 
 
@@ -12,4 +9,28 @@
 
 ინდიელები იყოფიან ე.წ. ამერინდიურ ეთნოლინგვისტურ ოჯახებად: ალგონკინურ-მოსური, ანდო-ეკვატორული, აცტეკურ-ტანური, ჟე-პანო-კარიბული, ხოკა-სიუ, მაკრო-ოტომანგუა, მაკრო-ჩიბჩა, ნა-დენე, პენუტური, ტარასკული.
 
+
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
+
+[[bg:Индианци]]
+[[bs:Indijanci]]
+[[cs:Indián]]
+[[da:Oprindelige amerikanere]]
+[[de:Indianer]]
+[[en:Indigenous peoples of the Americas]]
+[[eo:Indianoj]]
+[[es:Amerindio]]
+[[fi:Intiaanit]]
+[[fr:Amérindiens]]
+[[he:אינדיאנים]]
+[[it:Nativi americani]]
+[[ja:アメリカ州の先住民族]]
+[[lt:Indėnai]]
+[[nl:Indianen]]
+[[no:Indianere]]
+[[pl:Indianie]]
+[[ru:Индейцы]]
+[[simple:Native American]]
+[[sv:Indianer]]
+[[zh:印第安人]]
