*Empty MediaWiki Message*

--- a/სპარსელები.mw
+++ b/სპარსელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''სპარსელები''' - ხალხი [[ირანი|ირანში]] (21,3 მლნ). მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს.
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 21,9 მლნ (1987). 
 *'''ენა''': [[სპარსული ენა|სპარსული]].
 *'''მორწმუნეები''': მუსულმანები-[[შიიზმი|შიიტები]]; ეთნოკონფესიური ჯგუფები გებრები და პარსები [[ზოროასტრიზმი|ზოროასტრიზმის]] მიმდევრებია.
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ირანი]]
