*Empty MediaWiki Message*

--- a/ვიეტნამელები.mw
+++ b/ვიეტნამელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ვიეტნამელები''' - [[ხალხი]], ვიეტნამის ძირითადი მოსახლენი (61 მლნ). ცხოვრობენ აგრეთვე [[კამბოჯა|კამბოჯაში]], [[ტაილანდი|ტაილანდში]], [[ლაოსი|ლაოსში]], [[აშშ|აშშ-]]ში და ა.შ. მიეკუთვნება სამხრეთაზიურ რასას.
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[ვიეტნამური ენა|ვიეტნამური]]. 
 *'''მორწმუნეები''': ძირითადად [[ბუდიზმი|ბუდისტები]], [[დაოსიზმი|დაოსისტები]], [[კონფუციანელობა|კონფუციანელები]], ნაწილი - [[კათოლიციზმი|კათოლიკები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 
 [[de:Vietnamesen]]
