*Empty MediaWiki Message*

--- a/ფრანგები.mw
+++ b/ფრანგები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ფრანგები''' - [[ხალხი]], [[საფრანგეთი|საფრანგეთის]] ძირითადი მოსახლენი. ცხოვრობენ აგრეთვე [[საფრანგეთი|საფრანგეთის]] სამფლობელოებში, ჩრდილოეთ აფრიკაში, [[აშშ|აშშ-]]ში (600 ათ.), [[იტალია|იტალიაში]] (300 ათ.), [[ბელგია|ბელგიაში]] (120 ათ.). ანთროპოლოგიურად [[ევროპეიდული რასა|ევროპეიდული რასის]] სხვადსხვა ტიპებს მიეკუთვნებიან. ფრანგების მთავარი ეთნოკომპონენტი იყო გალების კელტური ტომი, რომელიც შეერია ფრანკების, ბურგუნდების და სხვა გერმანულ ტომებს. [[საფრანგეთი|საფრანგეთში]] ჩამოყალიბდა 2 მონათესავე ეთნოერთობა - ჩრდილო-ფრანგული და სამხრეთ-ფრანგული (ანუ პროვანსული, ოქციტანური).
 
 
@@ -9,6 +6,7 @@
 *'''ენა''': [[ფრანგული ენა|ფრანგული]].
 *'''მორწმუნეები''': [[კათოლიციზმი|კათოლიკები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ფრანგები|*]]
 
