*Empty MediaWiki Message*

--- a/თურქები.mw
+++ b/თურქები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''თურქები''' - [[ხალხი]], [[თურქეთი|თურქეთის]] ძირითადი მოსახლენი (50 მლნ). ეთნოგრაფიული ჯგუფები - იურიუკები, ტახტაჯები, აბდალები, ზეიბეკები. ანთროპოლოგიურად სხვადასხვაგვაროვანნი არიან, თუმცა დიდი ნაწილი მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ბალკანურ-კავკასიურ შტოს. 
 
 
@@ -8,6 +5,13 @@
 *'''საერთო რაოდენობა''': 53,3 მლნ. 
 *'''ენა''': თურქული. 
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:თურქები|*]]
+
+[[de:Türken]]
+[[en:Turkish people]]
+[[ja:テュルク]]
+[[pl:Ludy tureckie]]
+[[tr:Türk halkları]]
+[[tt:Törki xalıqları]]
