--- a/ეგვიპტელები.mw
+++ b/ეგვიპტელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ეგვიპტელები''' - [[ხალხი]], [[ეგვიპტე|ეგვიპტის]] ძირითადი მოსახლეობა (54,2 მლნ). მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს. ჩამოყალიბდა მე-7 ს-ის შემდეგ მოსული არაბული ტომების და ადგილობრივი კოპტების, ბერბერების და სხვა ხალხების შერევით.
 
 
@@ -8,6 +5,6 @@
 *'''საერთო რაოდენობა''': 54,6 მლნ. 
 *'''ენა''': არაბული. 
 *'''მორწმუნეები''': [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ეგვიპტე]]
