*Empty MediaWiki Message*

--- a/ჩეხები.mw
+++ b/ჩეხები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ჩეხები''' - [[ხალხი]], [[ჩეხეთი|ჩეხეთის]] ძირითადი მოსახლენი (9,55 მლნ). 
 
 
@@ -8,6 +5,8 @@
 *'''საერთო რაოდენობა''': 10,38 მლნ 
 *'''ენა''': [[ჩეხური ენა|ჩეხური]].
 *'''მორწმუნეები''': ძირითადად [[კათოლიციზმი|კათოლიკები]], არიან აგრეთვე [[პროტესტანტიზმი|პროტესტანტები]].
+
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ჩეხები|*]]
