*Empty MediaWiki Message*

--- a/შოტლანდიელები.mw
+++ b/შოტლანდიელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''შოტლანდიელები''' - [[ხალხი]], [[შოტლანდია|შოტლანდიის]] და მისი მიმდებარე კ-ების ძირითადი მოსახლენი (5,18 მლნ). 
 
 
@@ -8,6 +5,7 @@
 *'''საერთო რაოდენობა''': 6,1 მლნ. 
 *'''ენა''': [[შოტლანდიური ენა|შოტლანდიური]].
 *'''მორწმუნეები''': ძირითადად პრესვიტერიანელები (გაელების ეთნოგრაფიული ჯგუფის გარდა).
+{{ეთნოგრაფია}}
 
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:შოტლანდიელები|*]]
