--- a/ბულგარელები.mw
+++ b/ბულგარელები.mw
@@ -1,5 +1,3 @@
-{{ესკიზი}}
-
 '''ბულგარელები''' - [[ხალხი]], [[ბულგარეთი|ბულგარეთის]] ძირითადი მოსახლენი (7,85 მლნ). ცხოვრობენ აგრეთვე [[უკრაინა|უკრაინაში]] (234 ათ.), [[მოლდოვა|მოლდოვაში]] (88 ათ.), [[რუსეთი|რუსეთის ფედერაციაში]] (32,8 ათ.) და სხვა ქვეყნებში. 
 
 
@@ -7,7 +5,7 @@
 *'''საერთო რაოდენობა''': 8,45 მლნ. 
 *'''ენა''': [[ბულგარული ენა|ბულგარული]].
 *'''მორწმუნეები''': ძირითადად [[მართლმადიდებლობა|მართლმადიდებლები]], ნაწილი - [[სუნიზმი|სუნიტი მუსულმანები]].
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[bg:Българи]]
 [[de:Bulgaren]]
