*Empty MediaWiki Message*

--- a/პორტუ.mw
+++ b/პორტუ.mw
@@ -1,4 +1,13 @@
-'''პორტუ''' ''([[პორტუგალიური ენა|პორტ.]] Porto)'' არის [[პორტუგალია|პორტუგალიური]] ქალაქი.
+[[სურათი:PRT.png|thumb|პორტუს გერბი]]
+[[სურათი:LocalPorto.svg|thumb|პორტუ ქვეყნის რუქაზე]]
+'''პორტუ''' ''([[პორტუგალიური ენა|პორტ.]] Porto)'', უწინ '''პორტუკალე''' -- [[პორტუგალია|პორტუგალიის]] ქალაქი. ქალაქის მოსახლეობა შეადგენს 263.000 ადამიანს, აგლომერაციისა კი - 1.551.950-ს და სიდიდით მეორე ქალაქია ქვეყანაში; ასევე, პორტოს ოლქის ადმინისტრაციული ცენტრი და ნორტეს რეგიონის დედაქალაქი. მდებარეობს ქვეყნის ჩრდილოეთში, მდ. დოუროს ჩრდ. სანაპიროზე, ატლანტის ოკეანის შესართავთან. ქალაქს ხმელთაშუა ზღვის კლიმატი ახასიათებს, თუმცა მასზე გავლენას ატლანტის გრილი ნიავი ახდენს, მიუხედავად ამისა ზაფხულში, განსაკუთრებით კი აგვისტოში, აქ ტემპერატურა 40ºC-ს აღწევს.
+
+ქვეყანა პორტუგალია და [[პორტვეინი]] (პორტ.: Vinho do Porto) სახელს ამ ქალაქიდან იღებენ. პორვეინი ქვეყნის ყველაზე განთქმული პროდუქტია. მისი სახელი მომდინარეობს იმ ფაქტიდან, რომ ეს ღვინო ძველდება პორტუს სამხრეთით დობილი ქალაქი ვილა-ნოვა-დე-გაიას ღვინის სარდაფებში. პორტვეინი მის დამახასიათებელ გემოს იღებს ბრენდისგან, რომელსაც მას ფერმენტაციის პროცესის განმავლობაში ამატებენ. ეს დანამატი იწვევს ფერმენტაციის შეჩერებას, რაც ყურძნის სიტკბოს შენარჩუნებას განაპირობებს. ამ პროცესის შედეგი სრულიად შემთხვევით აღმოჩენილ იქნა ბრიტანელ ვაჭართა მიერ, რომლებმაც ღვინოს ბრენდი დაამატეს უბრალოდ მისი ინგლისისკენ ხანგრძლივი ტრანსპორტირების განავლობაში შენარჩუნებისთვის.
+
+პორტუ ასევე ამავე სახელწოდების აგლომერაციის შუაგულშია. ეს პორტუგალიის ერთ-ერთი ყველაზე ინდუსტრიალიზებული ცენტრია, რიც გამოც პორტუს ხშირად უწოდებენ "A capital do norte" (ქართ.: "ჩრდილოეთის დედაქალაქი"), მისი სამეწარმეო სულისკვეთების, დამახასიათებელი კულტურის, ხალხისა და ადგილობრივი სამზარეულოს გამო.
+
+
+
 
 {{ესკიზი}}
 
