--- a/პორტუგალია.mw
+++ b/პორტუგალია.mw
@@ -102,16 +102,17 @@
 
 
 ==ცნობილი პორტუგალიელები== 
-
-*მოგზაურები - ვასკო და გამა, ფერნანდო მაგელანი, 
-*ფილოსოფოსი - ურიელ აკოსტა, 
-*მწერლები - ლუიშ დე კამოენში, ესა დი კეიროში, ფერნანდო პესოა, 
+*მოგზაურები - [[და გამა, ვასკო|ვასკო და გამა]], [[მაგელანი, ფერნანდო|ფერნანდო მაგელანი]], 
+*ფილოსოფოსი - [[აკოსტა, ურიელ|ურიელ აკოსტა]], 
+*მწერლები - ლუიშ დე კამოენში, ესა დი კეიროში, ფერნანდო პესოა, [[სარამაგო, ჟოზე|ჟოზე სარამაგო]]
 *სპორტსმენები - ეუსებიო, ლუიშ ფიგუ, 
 *პოლიტიკოსები - ანტონიო სალაზარი, მარიუ სოარეში.
 
 {{ევროპის ქვეყნები}}
 [[კატეგორია:პორტუგალია|*]]
 [[კატეგორია:ევროპის ქვეყნები]]
+
+{{ევროპა}}
 
 [[af:Portugal]]
 [[als:Portugal]]
