*Empty MediaWiki Message*

--- a/არტ-ნუვო.mw
+++ b/არტ-ნუვო.mw
@@ -30,7 +30,7 @@
 *[http://www.itic.org.ge/heritage/artnouveau/index.html არტ-ნუვო არქიტექტურა საქართველოში]
 
 
-{{ითარგმნება}}
+{{ხელოვნება}}
 
 [[კატეგორია:ვიზუალური ხელოვნება]]
 
