--- a/ოდერის_ფრანკფურტი.mw
+++ b/ოდერის_ფრანკფურტი.mw
@@ -32,7 +32,7 @@
 | [[ობერბურგომისტრი]]: || [[პაცელტი, მარტინ|მარტინ პაცელტი]] ([[გქდკ]])
 |}
 
-'''ფრანკფურტ-ან-დერ-ოდერი''' (''[[გერმ.]]:'' Frankfurt an der Oder) ''ან შემოკლებით'' '''ოდერის ფრანკფურტი''' (''[[გერმ.]]:'' Frankfurt (Oder)) მდებარეობს [[გერმანია|გერმანიაში]], [[ბრანდენბურგი (მხარე)|ბრანდენბურგში]] მდინარე [[ოდერი|ოდერის]] მარცხენა ნაპირზე.
+'''ფრანკფურტ-ან-დერ-ოდერი''' (''[[გერმ.]]:'' Frankfurt (Oder)) ''ან შემოკლებით'' '''ოდერის ფრანკფურტი''' (''[[გერმ.]]:'' Frankfurt (Oder)) მდებარეობს [[გერმანია|გერმანიაში]], [[ბრანდენბურგი (მხარე)|ბრანდენბურგში]] მდინარე [[ოდერი|ოდერის]] მარცხენა ნაპირზე.
 
 
 
@@ -42,7 +42,7 @@
 [[af:Frankfurt (Oder)]]
 [[bg:Франкфурт на Одер]]
 [[de:Frankfurt (Oder)]]
-[[en:Frankfurt an der Oder]]
+[[en:Frankfurt (Oder)]]
 [[eo:Frankfurto ĉe Odro]]
 [[es:Fráncfort del Oder]]
 [[fr:Francfort-sur-l'Oder]]
