*Empty MediaWiki Message*

--- a/ეკონომიკა.mw
+++ b/ეკონომიკა.mw
@@ -44,7 +44,7 @@
 
 [[გეგმიური ეკონომიკა]] - [[ეკონომიკური ფორმაცია]] - [[ეკონომიკური ზრდა]] - [[მოთხოვნა და მიწოდება]] - [[მონეტარული პოლიტიკა]] - [[მოხმარების თეორია]] - [[საბაზრო ეკონომიკა]] - [[საერთაშორისო ვაჭრობა]] - [[ფისკალური პოლიტიკა]]
 
-{{ესკიზი}}
+{{ეკონომიკა}}
 
 [[კატეგორია:ეკონომიკა|*]]
 
