*Empty MediaWiki Message*

--- a/მიკროეკონომიკა.mw
+++ b/მიკროეკონომიკა.mw
@@ -2,7 +2,7 @@
 
 მიკროეკონომიკის მიზანია გაანალიზოს საბაზრო ფორმა ან სხვა ტიპის მექანიზმი, რომელიც აყალიბებს შესაბამის ფასებს საქონელსა და მომსახურეობებისთვის და/ან ანაწილებს საზოგადოების რესურსებს მათი მრავალი ალტერნატიული გამოყენების მიხედვით.
 
-{{ესკიზი}}
+{{ეკონომიკა}}
 
 
 [[კატეგორია:ეკონომიკა]]
