*Empty MediaWiki Message*

--- a/ოდერის_ფრანკფურტი.mw
+++ b/ოდერის_ფრანკფურტი.mw
@@ -42,7 +42,7 @@
 [[af:Frankfurt (Oder)]]
 [[bg:Франкфурт на Одер]]
 [[de:Frankfurt (Oder)]]
-[[en:Frankfurt (Oder)]]
+[[en:Frankfurt an der Oder]]
 [[eo:Frankfurto ĉe Odro]]
 [[es:Fráncfort del Oder]]
 [[fr:Francfort-sur-l'Oder]]
