*Empty MediaWiki Message*

--- a/პორტვაინი.mw
+++ b/პორტვაინი.mw
@@ -5,7 +5,7 @@
 
 პორტის ღვინო 16%-ზე ნაკლები ეთანოლის შემცველობით ვერ იცავს თავს ჰაერთან შეხების გამო გაფუჭებისგან. 18%-ზე მეტი ალკოჰოლით კი პორტვეინი შეიძლება შენახულ იქნას ხის ”მსუნთქავ” კასრებში, რაც მისი დაძველების საშუალებას იძლევა.
 
-{{ესკიზი}}
+{{ალკოჰოლური სასმისები}}
 
 [[კატეგორია:დესერტის ღვინოები]]
 [[კატეგორია:პორტუგალია]]
