*Empty MediaWiki Message*

--- a/შპიგელი_(ჟურნალი).mw
+++ b/შპიგელი_(ჟურნალი).mw
@@ -17,7 +17,7 @@
 ეს ინციდენტი საყოველთაოდ განიხილებოდა, როგორც პრესის თავისუფლების შელახვა, ხოლო შპიგელი კი - ამ თავისუფლების ბასტიონი. მას შემდეგ შპიგელი მნიშვნელოვან როლს თამაშობს გერმანიის მთავრობაში სხვადასხვა პოლიტიკური მაქინაციებისა და ძალთა დაპირისპირებების გამოვლენაში.
 
 
-{{ესკიზი}}
+{{პრესა}}
 ==რესურსები ინტერნეტში==
 *[http://www.spiegel.de/ შპიგელის ვებ-გვერდი]
 
