*Empty MediaWiki Message*

--- a/ეკონომისტი_(ჟურნალი).mw
+++ b/ეკონომისტი_(ჟურნალი).mw
@@ -8,7 +8,7 @@
 ეკონომისტი საკუთარ თავს გაზეთს უწოდებს, რაც მის ლეგალურ სტატუსს ასახავს ამ ფორმით მშობლიურ ტერიტორიაზე, ინგლისში, რეგისტრაციის გამო. თუმცა სხვა გაზეთებისგან განსხვავებით ის ჟურნალის ფორმით იბეჭდება პრიალა ქაღალდზე.
 
 
-{{ესკიზი}}
+{{პრესა}}
 
 [[კატეგორია:ბრიტანული მას-მედია]]
 
