*Empty MediaWiki Message*

--- a/ბადენ-ვიურტემბერგი.mw
+++ b/ბადენ-ვიურტემბერგი.mw
@@ -12,6 +12,7 @@
 
 [[af:Baden-Württemberg]]
 [[als:Baden-Württemberg]]
+[[an:Baden-Wurtenmberg]]
 [[ar:بادن-فورتمبيرغ]]
 [[ast:Baden-Württemberg]]
 [[bg:Баден-Вюртемберг]]
