*Empty MediaWiki Message*

--- a/ახალი_ინგლისი.mw
+++ b/ახალი_ინგლისი.mw
@@ -12,7 +12,7 @@
 
 [[შუა-ატლანტიკის რეგიონი|შუა-ატლანტიკისა]] და ახალი ინგლისის რეგიონები ერთად აშშ-ის [[ჩრდილო-აღმოსავლეთ რეგიონი|ჩრდილო-აღმოსავლეთ რეგიონს]] ქმნიან.
 
-{{ესკიზი}}
+{{აშშ}}
 
 
 [[კატეგორია:აშშ]]
