*Empty MediaWiki Message*

--- a/დედოფლისწყაროს_მუნიციპალიტეტი.mw
+++ b/დედოფლისწყაროს_მუნიციპალიტეტი.mw
@@ -1,7 +1,7 @@
 [[image:ge-ka-dedoflistskaro.PNG|thumb|დედოფლისწყაროს რაიონი]]
 '''დედოფლისწყაროს რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[კახეთის მხარე|კახეთის მხარეში]].
 
-{{ესკიზი}}
+{{საქართველო}}
 
 
 {{კახეთი}}
