*Empty MediaWiki Message*

--- a/საგარეჯოს_მუნიციპალიტეტი.mw
+++ b/საგარეჯოს_მუნიციპალიტეტი.mw
@@ -1,7 +1,10 @@
 [[image:ge-ka-sagarejo.PNG|thumb|საგარეჯოს რაიონი]]
 '''საგარეჯოს რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[კახეთის მხარე|კახეთის მხარეში]].
 
-{{ესკიზი}}
+
+
+
+{{საქართველო}}
 
 
 {{კახეთი}}
