*Empty MediaWiki Message*

--- a/სიღნაღის_მუნიციპალიტეტი.mw
+++ b/სიღნაღის_მუნიციპალიტეტი.mw
@@ -1,7 +1,10 @@
 [[image:ge-ka-signagi.PNG|thumb|სიღნაღის რაიონი]]
 '''სიღნაღის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[კახეთის მხარე|კახეთის მხარეში]].
 
-{{ესკიზი}}
+
+
+
+{{საქართველო}}
 
 
 {{კახეთი}}
