*Empty MediaWiki Message*

--- a/ყვარლის_მუნიციპალიტეტი.mw
+++ b/ყვარლის_მუნიციპალიტეტი.mw
@@ -1,7 +1,10 @@
 [[image:ge-ka-kvareli.PNG|thumb|ყვარლის რაიონი]]
 '''ყვარლის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[კახეთის მხარე|კახეთის მხარეში]].
 
-{{ესკიზი}}
+
+
+
+{{საქართველო}}
 
 
 {{კახეთი}}
