*Empty MediaWiki Message*

--- a/ხარაგაულის_მუნიციპალიტეტი.mw
+++ b/ხარაგაულის_მუნიციპალიტეტი.mw
@@ -24,6 +24,7 @@
 საქართველოში ხარაგაული ითვლება ყველაზე დიდ და მდიდარ რაიონად ხის რესურსების მხრივ; 
 ბორჯომ – ხარაგაულის ტყეპარკი მთელ მცირე კავკასიაში იცავს და ინარჩუნებს ფლორისა და ფაუნის უნიკალურ ნიმუშებს.
 
+{{საქართველო}}
 {{იმერეთი}}
 
 [[fi:Kharagauli]]
