*Empty MediaWiki Message*

--- a/ფოთი.mw
+++ b/ფოთი.mw
@@ -4,6 +4,8 @@
 
 ფოთსა და თბილისს შორის რკინიგზის ხაზის გაყვანამ მისი მნიშვნელობა ძალიან გაზარდა. იგი ახლაც რჩება საქართველოს საზღვაო კარიბჭედ. იგი მნიშვნელოვანი სარკინიგზო კვანძია. აქ არის ნავთობგადამამუშავებელი, გემთმშენებლობის, გემთშემკეთებელი, კვებისმრეწველობის საწარმოები, ასევე განათლებისა და კულტურის დაწესებულებები (უმაღლესი სასწავლებელები, თეატრი, მხარეთმცოდნეობის მუზეუმი). ფოთში არის [[ფოთი-ხობის  ეპარქია|ფოთი-ხობის  ეპარქიის]] კათედრა და რეზიდენცია.
 
+
+{{საქართველო}}
 [[კატეგორია:საქართველოს ქალაქები]]
 
 [[bg:Поти]]
