--- a/ჩხოროწყუს_მუნიციპალიტეტი.mw
+++ b/ჩხოროწყუს_მუნიციპალიტეტი.mw
@@ -1,7 +1,7 @@
 [[image:ge-sz-chkhorotsku.PNG|thumb|ჩხოროწყუს რაიონი]]
 '''ჩხოროწყუს რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
 [[კატეგორია:საქართველოს რაიონები]]
