--- a/წალენჯიხის_მუნიციპალიტეტი.mw
+++ b/წალენჯიხის_მუნიციპალიტეტი.mw
@@ -1,7 +1,7 @@
 [[image:ge-sz-tsalenjikha.PNG|thumb|წალენჯიხის რაიონი]]
 '''წალენჯიხის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
 [[კატეგორია:საქართველოს რაიონები]]
