--- a/ხობის_მუნიციპალიტეტი.mw
+++ b/ხობის_მუნიციპალიტეტი.mw
@@ -1,7 +1,7 @@
 [[image:ge-sz-khobi.PNG|thumb|ხობის რაიონი]]
 '''ხობის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
 [[კატეგორია:საქართველოს რაიონები]]
