*Empty MediaWiki Message*

--- a/სოხუმის_მუნიციპალიტეტი.mw
+++ b/სოხუმის_მუნიციპალიტეტი.mw
@@ -3,7 +3,7 @@
 '''სოხუმის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{აფხაზეთი}}
 
