--- a/ოჩამჩირის_მუნიციპალიტეტი.mw
+++ b/ოჩამჩირის_მუნიციპალიტეტი.mw
@@ -3,7 +3,7 @@
 '''ოჩამჩირის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{აფხაზეთი}}
 
