*Empty MediaWiki Message*

--- a/გულრიფშის_მუნიციპალიტეტი.mw
+++ b/გულრიფშის_მუნიციპალიტეტი.mw
@@ -3,7 +3,7 @@
 '''გულრიფშის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{აფხაზეთი}}
 
