*Empty MediaWiki Message*

--- a/სოხუმი.mw
+++ b/სოხუმი.mw
@@ -6,6 +6,10 @@
 
 სოხუმთან 5 კილომეტრში, სოფელ ეშერაში განლაგებულია რუსეთის გასამხედროებული ლაბორატორია, რომელიც, საქართველოს მწვანეთა მოძრაობის ცნობით, მიწისქვეშა ბიძგების ხელოვნურ გამოწვევაზე ატარებს ცდებს.
 
+
+{{საქართველო}}
+{{აფხაზეთი}}
+
 [[კატეგორია:საქართველოს ქალაქები]]
 
 [[ab:Аҟəа]]
