*Empty MediaWiki Message*

--- a/ხულოს_მუნიციპალიტეტი.mw
+++ b/ხულოს_მუნიციპალიტეტი.mw
@@ -3,7 +3,7 @@
 '''ხულოს რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აჭარის ავტონომიური რესპუბლიკა|აჭარის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{აჭარა}}
 
