*Empty MediaWiki Message*

--- a/ხობის_მუნიციპალიტეტი.mw
+++ b/ხობის_მუნიციპალიტეტი.mw
@@ -1,6 +1,14 @@
 [[image:ge-sz-khobi.PNG|thumb|ხობის რაიონი]]
 '''ხობის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
+
 {{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
