--- a/წალენჯიხის_მუნიციპალიტეტი.mw
+++ b/წალენჯიხის_მუნიციპალიტეტი.mw
@@ -1,6 +1,14 @@
 [[image:ge-sz-tsalenjikha.PNG|thumb|წალენჯიხის რაიონი]]
 '''წალენჯიხის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
+
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 {{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
