*Empty MediaWiki Message*

--- a/ჩხოროწყუს_მუნიციპალიტეტი.mw
+++ b/ჩხოროწყუს_მუნიციპალიტეტი.mw
@@ -1,6 +1,14 @@
 [[image:ge-sz-chkhorotsku.PNG|thumb|ჩხოროწყუს რაიონი]]
 '''ჩხოროწყუს რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
+
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 {{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
