*Empty MediaWiki Message*

--- a/სენაკის_მუნიციპალიტეტი.mw
+++ b/სენაკის_მუნიციპალიტეტი.mw
@@ -1,6 +1,13 @@
 [[image:ge-sz-senaki.PNG|thumb|სენაკის რაიონი]]
 '''სენაკის რაიონი''' - ადმინისტრაციულ-ტერიტორიული [[რაიონი]] [[სამეგრელოს და ზემო სვანეთის მხარე|სამეგრელოს და ზემო სვანეთის მხარეში]].
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 {{საქართველო}}
 
 {{სამეგრელო-ზემო სვანეთი}}
