*Empty MediaWiki Message*

--- a/ოჩამჩირის_მუნიციპალიტეტი.mw
+++ b/ოჩამჩირის_მუნიციპალიტეტი.mw
@@ -2,6 +2,13 @@
 
 '''ოჩამჩირის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 
 {{საქართველო}}
 
