*Empty MediaWiki Message*

--- a/გალის_მუნიციპალიტეტი.mw
+++ b/გალის_მუნიციპალიტეტი.mw
@@ -3,6 +3,13 @@
 '''გალის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 {{საქართველო}}
 
 {{აფხაზეთი}}
