--- a/გაგრის_მუნიციპალიტეტი.mw
+++ b/გაგრის_მუნიციპალიტეტი.mw
@@ -1,6 +1,12 @@
 [[image:ge-ab-gagra.PNG|thumb|გაგრის რაიონი]]
 
 '''გაგრის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აფხაზეთის ავტონომიური რესპუბლიკა|აფხაზეთის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
 
 
 {{საქართველო}}
