--- a/ხულოს_მუნიციპალიტეტი.mw
+++ b/ხულოს_მუნიციპალიტეტი.mw
@@ -2,6 +2,13 @@
 
 '''ხულოს რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აჭარის ავტონომიური რესპუბლიკა|აჭარის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 
 {{საქართველო}}
 
