*Empty MediaWiki Message*

--- a/ხელვაჩაურის_მუნიციპალიტეტი.mw
+++ b/ხელვაჩაურის_მუნიციპალიტეტი.mw
@@ -2,6 +2,12 @@
 
 '''ხელვაჩაურის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აჭარის ავტონომიური რესპუბლიკა|აჭარის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
 
 {{საქართველო}}
 
