*Empty MediaWiki Message*

--- a/შუახევის_მუნიციპალიტეტი.mw
+++ b/შუახევის_მუნიციპალიტეტი.mw
@@ -1,5 +1,12 @@
 '''შუახევის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აჭარის ავტონომიური რესპუბლიკა|აჭარის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
+
 
 {{საქართველო}}
 
