*Empty MediaWiki Message*

--- a/ქობულეთის_მუნიციპალიტეტი.mw
+++ b/ქობულეთის_მუნიციპალიტეტი.mw
@@ -2,8 +2,14 @@
 
 '''ქობულეთის რაიონი''' - ადმინისტრაციულ-ტერიტორიული ერთეული [[საქართველო|საქართველოში]], [[აჭარის ავტონომიური რესპუბლიკა|აჭარის ავტონომიური რესპუბლიკის]] შემადგენლობაში.
 
+==ბუნება==
+==მოსახლეობა==
+==მმართველობა==
+== ეკონომიკა==
+==კულტურა==
+==ღირშესანიშნაობანი==
 
-{{ესკიზი}}
+{{საქართველო}}
 
 {{აჭარა}}
 
