*Empty MediaWiki Message*

--- a/ყორნისი.mw
+++ b/ყორნისი.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ზნაური''' - [[დაბა]], ყოფილი ზნაურის რაიონის ადმინისტრაციული ცენტრი. სახელი ეწოდა ოსი რევოლუციონერის, საბჭოთა ხელისუფლებისათვის მებრძოლი ზნაურ აიდაროვის პატივსაცემად. მისი ძველი სახელია ყორნისი.
-
+ {{საქართველო}}
 [[კატეგორია:საქართველოს დაბები]]
