*Empty MediaWiki Message*

--- a/მზე.mw
+++ b/მზე.mw
@@ -1,7 +1,7 @@
 [[სურათი:The Sun w920607.jpg|thumb|მზე]]
 '''მზე''' სპექტრული ტიპის G2V ყვითელი [[ვარსკვლავი|ვარსკვლავია]] [[მზის სისტემა|მზის სისტემის]] ცენტრში [[რძიანი გზა (გალაქტიკა)|რძიანი გზის]] [[გალაქტიკა|გალაქტიკაში]]. [[დედამიწა]] და სხვა [[ციური სხეული|ციური სხეულები]] (მათ შორის სხვა [[პლანეტა|პლანეტები]], [[ასტეროიდი|ასტეროოიდები]], [[მეტეორიდი|მეტეორიდები]], [[კომეტა|კომეტები]] და [[კოსმოსური მტვერი]]) მზის ირგვლის გარკვეულ [[ორბიტა|ორბიტაზე]] მოძრაობენ.
 
-{{ესკიზი}}
+{{ასტრონომია}}
 {{მზის სისტემა}}
 [[კატეგორია:ვარსკვლავები]]
 [[კატეგორია:მზის სისტემა]]
