*Empty MediaWiki Message*

--- a/დავით_ოძელაშვილი.mw
+++ b/დავით_ოძელაშვილი.mw
@@ -7,7 +7,7 @@
 
 შემდგომში დატო ჯაზ-კვარტეტთან ერთად გამოდის საერთაშორისო ჯაზ-ფესტივალზე ნანტში 2000 წლის სექტემბერში და თბილისში იმავე წელს გამართულ "ჯეოსელის ჯაზ-ფესტივალში".
 
-{{ესკიზი}}
+{{მუსიკოსები}}
 
 ==რესურსები ინტერნეტში==
 *[http://jazz-tbilisi.chat.ru/ ჯაზ-კვარტეტი "თბილისი"]
