*Empty MediaWiki Message*

--- a/პარიზი.mw
+++ b/პარიზი.mw
@@ -1,7 +1,6 @@
-[[სურათი:Eiffel Tower from Place du Trocadéro.jpg|thumb|right|200px|პარიზი]]
+[[სურათი:Eiffel Tower from Place du Trocadéro.jpg|thumb|200px|პარიზი]]
 '''პარიზი''' არის [[საფრანგეთი|საფრანგეთის]] დედაქალაქი.
-
-{{ესკიზი}}
+{{საფრანგეთი}}
 
 [[კატეგორია:ევროპის დედაქალაქები]]
 [[კატეგორია:საფრანგეთი]]
