*Empty MediaWiki Message*

--- a/ჰინდუსტანელები.mw
+++ b/ჰინდუსტანელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ჰინდუსტანელები''' - ეთნიკური ერთობა, [[ინდოეთი|ინდოეთის]] ძირითადი მოსახლენი (245 მლნ). დაახლ. 656 ათ. [[ინდოეთი|ინდოეთის]] ფარგლებს გარეთაა. შედგება მრავალი ადგილობრივი ჯგუფისაგან, რომლებსაც აერთიანებს საერთო ლიტერატურული ენა ჰინდი. მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს.
 
 
@@ -8,4 +5,5 @@
 *'''ენა''': ჰინდის დიალექტები.  
 *'''მორწმუნეები''': ძირითადად [[ინდუიზმი|ინდუისტები]], ნაწილი ტრადიციული რწმენების მიმდევრები.
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
