--- a/ბენგალელები.mw
+++ b/ბენგალელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ბენგალები''' - [[ხალხი]], [[ბანგლადეში|ბანგლადეშის]] ძირითადი მოსახლენი (109,5 მლნ). ცხოვრობენ აგრეთვე [[ინდოეთი|ინდოეთში]] (80 მლნ), [[ნეპალი|ნეპალში]], [[ბუტანი|ბუტანში]], [[სინგაპური|სინგაპურში]]. მიეკუთვნებიან [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს. სამხრეთ-აღმოსავლეთში ჭარბობს მონგოლოიდური ელემენტები, სამხრეთში - დრავიდული.
 
 
@@ -9,5 +6,6 @@
 *'''ენა''': ბენგალური ანუ ბანგლა-ბჰასა; ფართოდ იყენებენ ჰინდის, ურდუს, ინგლისურს. 
 *'''მორწმუნეები''': [[ბანგლადეში|ბანგლადეშში]] ძირითადად [[სუნიზმი|სუნიტი მუსულმანები]], [[ინდოეთი|ინდოეთში]] ძირითადად [[ინდუიზმი|ინდუისტები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
