*Empty MediaWiki Message*

--- a/პენჯაბელები.mw
+++ b/პენჯაბელები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''პენჯაბელები''' - ხალხი [[პაკისტანი|პაკისტანში]] (პენჯაბის პროვინცია, 82 მლნ) და [[ინდოეთი|ინდოეთში]] (პენჯაბის შტატი). მიეკუთვნება [[ევროპეიდული რასა|ევროპეიდული რასის]] ინდო-მედიტერანეულ შტოს.
 
 
@@ -9,6 +6,6 @@
 *'''ენა''': პენჯაბური; ფართოდაა გავრცელებული აგრეთვე ჰინდი და ურდუ. 
 *'''მორწმუნეები''': [[ინდოეთი|ინდოეთში]] - ძირითადად [[ინდუიზმი|ინდუისტები]], [[პაკისტანი|პაკისტანში]] - [[სუნიზმი|სუნიტი მუსულმანები]].
 
-
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
