*Empty MediaWiki Message*

--- a/ბიჰარები.mw
+++ b/ბიჰარები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ბიჰარელები''' - მონათესავე ეთნოსების ჯგუფი (მაიტილები, მაგაჰები, ბოჯპურები) [[ინდოეთი|ინდოეთში]] (92,5 მლნ, ბიჰარის შტატი) და მის მოსაზღვრე რეგიონებში [[ნეპალი|ნეპალში]] (3,64 მლნ), [[ბანგლადეში|ბანგლადეშში]] (1,45 მლნ), [[ბუტანი|ბუტანში]]. 
 
 
@@ -9,5 +6,6 @@
 *'''ენა''': ლაპარაკობენ ინდო-ირანული შტოს მონათესავე ენებზე. 
 *'''მორწმუნეები''': ძირითადად [[ინდუიზმი|ინდუისტები]] (ვიშნუისტები და შივაისტები).
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
