*Empty MediaWiki Message*

--- a/იაველები.mw
+++ b/იაველები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''იაველები''' - ხალხი [[ინდონეზია|ინდონეზიაში]] (89,0 მლნ), კუნძულ იავის ცენტრალური ნაწილის ძირითადი მოსახლენი. ცხოვრობენ აგრეთვე [[მალაიზია|მალაიზიაში]], [[ავსტრალია|ავსტრალიაში]], [[ნიდერლანდი|ნიდერლანდში]]. მიეკუთვნება სამხრეთაზიურ გარდამავალ რასობრივ ტიპს.
 
 
@@ -9,4 +6,5 @@
 *'''ენა''': იავური; ფართოდ იყენებენ ასევე ინდონეზიურს. 
 *'''მორწმუნეები''': ძირითადად [[სუნიზმი|სუნიტი მუსულმანები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
