--- a/ტელუგები.mw
+++ b/ტელუგები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''ტელუგები''' - ხალხი [[ინდოეთი|ინდოეთში]], ანდჰრა-პრადეშის შტატის ძირითადი მოსახლენი. ცხოვრობენ აგრეთვე ტამილნადუსა და კარნატაკის შტატებში; მიეკუთვნება სამხრეთინდურ რასას. ტელუგების ეთნოგენეტიკური ბაზა იყო დრავიდული ტომები - ანდჰრა, კალინგა და ტელუგუ. ძვ. წ. მე-2 ს. - ახ. წ. მე-3 ს-ში ისინი ერთმანეთს შეერწყნენ.
 
 
@@ -9,5 +6,6 @@
 *'''ენა''': ტელუგუ. 
 *'''მორწმუნეები''':  ძირითადად [[ინდუიზმი|ინდუისტები]], ნაწილი - [[სუნიზმი|სუნიტი მუსულმანები]].
 
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
