*Empty MediaWiki Message*

--- a/მარათები.mw
+++ b/მარათები.mw
@@ -1,6 +1,3 @@
-{{ესკიზი}}
-
-
 '''მარატები''' - ხალხი [[ინდოეთი|ინდოეთში]], მაჰარაშტრას შტატის ძირითადი მოსახლენი; 
 
 
@@ -9,6 +6,6 @@
 *'''ენა''': [[მარატული ენა|მარატული]].
 *'''მორწმუნეები''': ძირითადად [[ინდუიზმი|ინდუისტები]], არიან აგრეთვე მუსულმანები (ძირითადად [[შიიზმი|შიიტები]]), [[ბუდიზმი|ბუდისტები]], [[კათოლიციზმი|კათოლიკები]].
 
-
+{{ეთნოგრაფები}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
