*Empty MediaWiki Message*

--- a/მარათები.mw
+++ b/მარათები.mw
@@ -6,6 +6,6 @@
 *'''ენა''': [[მარატული ენა|მარატული]].
 *'''მორწმუნეები''': ძირითადად [[ინდუიზმი|ინდუისტები]], არიან აგრეთვე მუსულმანები (ძირითადად [[შიიზმი|შიიტები]]), [[ბუდიზმი|ბუდისტები]], [[კათოლიციზმი|კათოლიკები]].
 
-{{ეთნოგრაფები}}
+{{ეთნოგრაფია}}
 [[კატეგორია:მსოფლიოს ხალხები]]
 [[კატეგორია:ინდოეთი]]
